--- a/src/css/style.css
+++ b/src/css/style.css
@@ -141,6 +141,23 @@ table.invisible td
     border:0;
 }
 
+ul
+{
+    list-style-type:none;
+    padding:0;
+}
+
+ul ul li
+{
+    padding:1px 1px 1px 10px;
+    margin:1px 1px 1px 5px;
+}
+
+ul ul
+{
+    border-left:2px solid #D0D0D0;
+    margin:0 0 0 3px;
+}
 #logs
 {
     font-size:0.8em;
