--- a/src/css/code.css
+++ b/src/css/code.css
@@ -1,44 +1,37 @@
-.pasty
-{
-    margin:5px 0 5px 0;
-    padding:0;
-}
-
-.pasty table
-{
-    margin:0;
-    padding:0;
-    font-family: "Trebuchet MS", verdana;
-    border-spacing:0;
-    vertical-align:top;
-}
-
-.pasty > table
+.snippet
 {
     border:1px solid #d0d0d0;
+    border-collapse:collapse;
+    font-family: "Trebuchet MS", verdana;
+    font-size:1.1em;
+    border-spacing:0;
     width:100%;
+    padding:0;
+    margin:0;
 }
 
-.pasty tr
+.snippet tr
 {
     padding:0;
+    margin:0;
 }
 
-.pasty td
+.snippet td
 {
     padding:0;
+    margin:0;
+    border:1px solid #FF0000;
 }
 
-.lines
+
+td.lines
 {
     border:0;
-}
-.lines td
-{
+    border-right:1px solid #cfcfcf;
     background-color:#eaeaea;
-    padding:1px 20px 2px 20px;
+    padding:0 15px 0 15px;
+    margin:0;
     text-align:right;
-    border:0;
 }
 
 .lines a:link, .lines a:visited
@@ -51,43 +44,12 @@
     text-decoration:underline;
 }
 
-.code
+td.code
 {
     width:100%;
     border:0;
-}
-
-.code td
-{
+    padding:0 15px 0 10px;
     margin:0;
-    padding:1px 9px 2px 9px;
-    border:0;
-}
-
-.code td
-{
-    border-left:2px solid #d5d5d5;
-}
-
-.code td.hl
-{
-    background-color:#e0e0e0;
-    border-left:2px solid #653DBF;
-}
-
-.code td.r
-{
-    border-left:2px solid #E8947E;
-}
-
-.code input, .code input:focus
-{
-    margin:0;
-    padding:0;
-    border:0;
-    background-color:#D95E3E;
-    color:#ffffff;
-    font-size:1em;
 }
 
 .code .cmt
