--- a/src/css/style.css
+++ b/src/css/style.css
@@ -19,9 +19,23 @@ h2
     font-family:"Lucida Grande",Arial,Sans-serif;
     color:#222222;
     margin:30px 0 10px 0;
-    padding:2px;
+    padding:3px;
     border:0;
     border-bottom:1px dotted #d0d0d0;
+}
+
+h2 ul
+{
+    float:right;
+    display:inline;
+    margin:0;
+    padding:0;
+}
+
+h2 li
+{
+    display:inline;
+    padding:0 0 0 10px;
 }
 
 img
