--- a/src/css/code.css
+++ b/src/css/code.css
@@ -3,7 +3,7 @@
     border:1px solid #d0d0d0;
     border-collapse:collapse;
     font-family: "Trebuchet MS", verdana;
-    font-size:1.1em;
+    font-size:1.2em;
     border-spacing:0;
     width:100%;
     padding:0;
@@ -57,6 +57,11 @@ td.code
     color:#8a8a8a;
 }
 
+.code .doc
+{
+    color:#808080;
+}
+
 .code .str
 {
     color:#008800;
@@ -70,4 +75,14 @@ td.code
 .code .bui
 {
     color:#2898BF;
+}
+
+.code .nb
+{
+    color:#006666;
+}
+
+.code .tag
+{
+    font-weight:bold;
 }
