--- a/src/css/style.css
+++ b/src/css/style.css
@@ -292,7 +292,7 @@ ul ul
 }
 #logo
 {
-    padding:0 0 15px 0;
+    padding:15px 0 15px 0;
     margin: 0 0 15px 0;
     border-bottom:3px solid #6B75B4;
 }
