--- a/src/css/style.css
+++ b/src/css/style.css
@@ -67,8 +67,8 @@ form li
 
 textarea, input[type="text"]
 {
-    border:1px solid #cccccc;
-    background-color:#ffffff;
+    border:1px solid #bbbbbb;
+    background-color:#eeeeee;
     color:#000000;
     padding:2px;
     margin:0;
