--- a/src/css/style.css
+++ b/src/css/style.css
@@ -145,12 +145,13 @@ td
 {
     vertical-align:top;
     border-bottom:1px dotted #d9d9d9;
-    padding:3px;
+    padding:4px;
 }
 
 tfoot
 {
     text-align:right;
+    background-color:#f2f2f2;
 }
 
 table.invisible
