--- a/src/css/style.css
+++ b/src/css/style.css
@@ -189,7 +189,8 @@ table.invisible td
 
 ul
 {
-    list-style-type:none;
+    list-style-position:inside;
+    list-style-type:square;
     padding:0;
 }
 
@@ -205,6 +206,10 @@ ul ul
     margin:0 0 0 3px;
 }
 
+ul.invisible
+{
+    list-style-type:none;
+}
 #footers
 {
     margin:40px 20px 0 20px;
