styling snippet header

--- a/src/css/code.css
+++ b/src/css/code.css
@@ -2,7 +2,7 @@
 {
     border:0;
     border-bottom:1px solid #cfcfcf;
-    background-color:#eaeaea;
+    background:#e0e0e0 url(/images/box_grey_bg.png) repeat-x;
     padding:8px;
     margin:0;
 }
