--- a/src/css/style.css
+++ b/src/css/style.css
@@ -134,10 +134,10 @@ th
 {
     font-weight:bold;
     text-align:left;
-    background:#f0f0f0;
+    background:#e0e0e0 url(/images/box_grey_bg.png) repeat-x;
     border-bottom:1px solid #d4d4d4;
     margin:0 10px 0 10px;
-    padding:3px;
+    padding:7px 5px 7px 5px;
     font-size:0.9em;
 }
 
@@ -145,7 +145,18 @@ td
 {
     vertical-align:top;
     border-bottom:1px dotted #d9d9d9;
+    border-left:1px dotted #d9d9d9;
     padding:4px;
+}
+
+tr > td:first-child
+{
+    border-left:0;
+}
+
+tbody > tr:last-child > td
+{
+    border-bottom:0;
 }
 
 tfoot
