--- a/src/template/paste/code.html
+++ b/src/template/paste/code.html
@@ -1,27 +1,38 @@
 <table class="snippet">
-    <tr>
-        <td colspan="2" class="head">
-            {% if paste.language.name %}
-                <img src="{{paste.language.u_icon}}" alt="{{paste.language.name}}" title="{{paste.language.name}}" width="16" height="16" />
-                <strong><a href="{{ paste.language.u }}">{{paste.language.name}}</a> paste</strong>
-            {% else %}
-                <strong>Paste</strong>
-            {% endif %}
-            <small><a name="{{paste.slug}}" href="#{{paste.slug}}">#</a> {{paste.size.0}} {{paste.size.1}}, {{paste.loc}} LOC</small>
-            <ul>
-                <li>
-                    <img src="{{"images/silk/page_white_edit.png"|url}}" alt="Fork paste" width="16" height="16" />
-                    <small><a href="{{paste.u_fork}}"><strong>Fork</strong></a></small>
-                </li>
-                <li>
-                    <img src="{{"images/silk/page_white_text.png"|url}}" alt="Export paste" width="16" height="16" />
-                    <small><a href="{{paste.u_raw_text}}">Export as text</a> or <a href="{{paste.u_atom}}">atom</a></small>
-                </li>
-            </ul>
-        </td>
-    </tr>
-    <tr>
-        <td class="lines"><pre>{{ paste.lines}}</pre></td>
-        <td class="code"><pre>{{ paste.code }}</pre></td>
-    </tr>
+    <thead>
+        <tr>
+            <th colspan="2" class="head">
+                {% if paste.language.name %}
+                    <img src="{{paste.language.u_icon}}" alt="{{paste.language.name}}" title="{{paste.language.name}}" width="16" height="16" />
+                    <strong><a href="{{ paste.language.u }}">{{paste.language.name}}</a> paste</strong>
+                {% else %}
+                    <strong>Paste</strong>
+                {% endif %}
+                <small><a name="{{paste.slug}}" href="#{{paste.slug}}">#</a> {{paste.size.0}} {{paste.size.1}}, {{paste.loc}} LOC</small>
+                <ul>
+                    <li>
+                        <img src="{{"images/silk/page_white_edit.png"|url}}" alt="Fork paste" title="Fork paste" width="16" height="16" />
+                        <small><a href="{{paste.u_fork}}"><strong>Fork</strong></a></small>
+                    </li>
+                    <li>
+                        <img src="{{"images/silk/page_white_text.png"|url}}" alt="Export paste" title="Export paste" width="16" height="16" />
+                        <small><a href="{{paste.u_raw_text}}">Export as text</a> or <a href="{{paste.u_atom}}">atom</a></small>
+                    </li>
+                </ul>
+            </th>
+        </tr>
+    </thead>
+    <tfoot>
+        <tr>
+            <td colspan="2">
+                <a href="#{{paste.slug}}">Top</a>
+            </td>
+        </tr>
+    </tfoot>
+    <tbody>
+        <tr>
+            <td class="lines"><pre>{{ paste.lines}}</pre></td>
+            <td class="code"><pre>{{ paste.code }}</pre></td>
+        </tr>
+    </tbody>
 </table>
