--- a/src/template/paste/code.html
+++ b/src/template/paste/code.html
@@ -1,14 +1,15 @@
 <table class="snippet">
     <thead>
         <tr>
-            <th colspan="2" class="head">
+            <th colspan="2">
+                <a name="{{paste.slug}}" />
                 {% if paste.language.name %}
                     <img src="{{paste.language.u_icon}}" alt="{{paste.language.name}}" title="{{paste.language.name}}" width="16" height="16" />
                     <strong><a href="{{ paste.language.u }}">{{paste.language.name}}</a> paste</strong>
                 {% else %}
                     <strong>Paste</strong>
                 {% endif %}
-                <small><a name="{{paste.slug}}" href="#{{paste.slug}}">#</a> {{paste.size.0}} {{paste.size.1}}, {{paste.loc}} LOC</small>
+                <small>({{paste.size.0}} {{paste.size.1}}, {{paste.loc}} LOC)</small>
                 <ul>
                     <li>
                         <img src="{{"images/silk/page_white_edit.png"|url}}" alt="Fork paste" title="Fork paste" width="16" height="16" />
@@ -17,6 +18,9 @@
                     <li>
                         <img src="{{"images/silk/page_white_text.png"|url}}" alt="Export paste" title="Export paste" width="16" height="16" />
                         <small><a href="{{paste.u_raw_text}}">Export as text</a> or <a href="{{paste.u_atom}}">atom</a></small>
+                    </li>
+                    <li>
+                        <small><a href="#{{paste.slug}}">#</a></small>
                     </li>
                 </ul>
             </th>
