--- a/src/template/paste/code.html
+++ b/src/template/paste/code.html
@@ -1,8 +1,21 @@
+{% if paste.is_private %}
+<p class="lock"><strong>The paste <a href="{{paste.u}}">{{paste.slug|escape}}</a> is private</strong>. You need to know the secret key to view it.</p>
+{% endif %}
+
+{% if paste.is_waiting_for_approval %}
+<p class="lock"><strong>The paste <a href="{{paste.u}}">{{paste.slug|escape}}</a> is awaiting approval.</strong> It may take seconds or weeks before it turns public, it all depends on <a href="{{u_user}}">{{user_name|escape}}</a>.</p>
+{% endif %}
+
+{% if paste.is_moderated %}
+<p class="warning"><strong>The paste <a href="{{paste.u}}">{{paste.slug|escape}}</a> was moderated.</strong> Someone didn't read our guidelines... Wait, we don't have some !</p>
+{% endif %}
+
+{% if paste.is_code_viewable %}
 <table class="snippet">
     <thead>
         <tr>
             <th colspan="2">
-                <a name="{{paste.slug}}" />
+                <a name="{{paste.slug}}"></a>
                 {% if paste.language.name %}
                     <img src="{{paste.language.u_icon}}" alt="{{paste.language.name}}" title="{{paste.language.name}}" width="16" height="16" />
                     <strong><a href="{{ paste.language.u }}">{{paste.language.name}}</a> paste</strong>
@@ -44,3 +57,4 @@
         </tr>
     </tbody>
 </table>
+{% endif %}
