--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -17,16 +17,18 @@ h1
 }
 h2
 {
-    font-size:1em;
-    font-weight:normal;
-    font-family:"Lucida Grande",Arial,Sans-serif;
+    font:normal normal normal 1.6em Georgia;
     color:#222222;
-    margin:30px 0 10px 0;
+    margin:40px 0 10px 0;
     padding:3px;
     border:0;
-    border-bottom:1px dotted #d0d0d0;
+    border-top:2px solid #d0d0d0;
 }
 
+h2 strong
+{
+    font-weight:normal;
+}
 h2 ul
 {
     float:right;
@@ -186,6 +188,7 @@ tfoot
 tfoot td
 {
     border:0;
+    border-top:1px solid #d4d4d4;
 }
 
 .paging td a:link, .paging td a:visited
@@ -537,8 +540,8 @@ small a:hover
 }
 .dyn
 {
-    border:1px solid #AAE37C;
-    background-color:#f0f0f0;
+    border:1px solid #BDDFBD;
+    background-color:#f0fff0;
     background:#f0f0f0 url(/images/silk/lightbulb.png) 5px 10px no-repeat;
     padding:10px 10px 10px 30px;
 }
