Added a twitter bow at the bottom of the page showing the last tweet

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -545,6 +545,13 @@ small a:hover
     background:#f0f0f0 url(/images/silk/lightbulb.png) 5px 10px no-repeat;
     padding:10px 10px 10px 30px;
 }
+.twitter
+{
+    border:1px solid #BDDFBD;
+    background-color:#f0fff0;
+    background:#f0f0f0 url(/images/twitter.png) 5px 10px no-repeat;
+    padding:10px 10px 10px 30px;
+}
 .info
 {
     border:1px solid #d0d0d0;
