--- a/src/template/paste/code.html
+++ b/src/template/paste/code.html
@@ -22,7 +22,7 @@
                 {% else %}
                     <strong>Paste</strong>
                 {% endif %}
-                <small>({{paste.language.name|escape}}, {{paste.size.0}} {{paste.size.1}}, {{paste.loc}} LOC)</small>
+                <small>({% if paste.language.name %}{{paste.language.name|escape}}, {% endif %}{{paste.size.0}} {{paste.size.1}}, {{paste.loc}} LOC)</small>
                 <ul>
                     <li>
                         <img src="{{"images/silk/page_white_edit.png"|url}}" alt="Fork paste" title="Fork paste" width="16" height="16" />
